# CampusRouting

./: .gitignore  Makefile  README.md  notes.txt  pyproject.toml  requirements.txt
data/exits_positions/: solbosch.geojson  solbosch.kml  solbosch_exits.csv  solbosch_map.json  solbosch_map_updated.json
data/graphml/: bxl_plaine.graphml
data/images/instructions3D/: baseHallWay.blend
data/plans/Solbosch/P1/: building_p1.json
data/plans/Solbosch/S/: S.json
data/plans/Solbosch/buildings/P1/: P1.json
data/plans/Solbosch/buildings/S/: S.json
data/plans/Solbosch/general/: solbosch.csv  solbosch.kml  solbosch_map.json  solbosch_map_updated.json
report/: IEEEtran.cls  README.md  bibliography.bib  main.tex
src/: README.md  analyse_path.py  b_analyse.py  b_dijkstra.py  b_graph.py  build_graph.py  dijkstra.py  graph.py  json_to_graph.py  main.py  o_analyse.py  o_graph.py  solbosch_graph.py  test_api.py  update_weigths.py
src/Analyse/: __init__.py  b_analyse.py  o_analyse.py
src/Graph/: __init__.py  b_graph.py  graph.py  o_graph.py
src/api/: main.py  test_api.py
src/utils/: __init__.py  constants.py  update_weigths.py
test_location_js/: index.html  main.js
webpage/: ask_path.html  ask_path.js  localisation.html  package-lock.json  package.json  style.css  welcome.html
webpage/src/: interior.html  interior.js  localisation.html  localisation.js  output.css  state.js  store.js  style.css  temp_welcome.js  welcome.html  welcome.js
