[tool.poetry]
name = "campus-routing"
version = "0.1.0"
description = "The goal of the project is to implement a path-finding algorithm to find the shortest path to any class on the different campuses."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
osmnx = "^1.8.1"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
