[tool.poetry]
name = "campus-routing"
version = "0.1.0"
description = "The goal of the project is to implement a path-finding algorithm to find the shortest path to any class on the different campuses."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.2.1"
osmnx = "^1.8.1"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
matplotlib = "^3.8.2"
pqdict = "^1.3.0"
geopy = "^2.4.1"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
geocoder = "^1.38.1"
haversine = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Check https://beta.ruff.rs/docs/rules/ for all rules
fixable = ["ALL"]
# Do not fix imports automatically (it removes unused imports in __init__.py files)
unfixable = ["F401", "D205"]

# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", # pydocstyle
            "F", # pyflake
            "UP", # pyupgrade
            "D", # pydocstyle
            "W", # 
            "B", # 
            "C901"]
# ignore = ["PEP257"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.flake8-bandit]
check-typed-exception = true

[tool.ruff.isort]
case-sensitive = true

[tool.black]
line-length = 101


[tool.pyright]
# Check 
# extraPaths = ["./.venv/lib/python3.10/site-packages"]
line-length = 101
